lib/libesp32_epdiy/examples/mpd_status/components/libmpdclient/include/mpd/queue.h

struct mpd_connection;
bool
mpd_send_list_queue_meta(struct mpd_connection *connection);
bool
mpd_send_list_queue_range_meta(struct mpd_connection *connection,
			       unsigned start, unsigned end);
bool
mpd_send_get_queue_song_pos(struct mpd_connection *connection, unsigned pos);
mpd_malloc
struct mpd_song *
mpd_run_get_queue_song_pos(struct mpd_connection *connection, unsigned pos);
bool
mpd_send_get_queue_song_id(struct mpd_connection *connection, unsigned id);
mpd_malloc
struct mpd_song *
mpd_run_get_queue_song_id(struct mpd_connection *connection, unsigned id);
bool
mpd_send_queue_changes_meta(struct mpd_connection *connection,
			    unsigned version);
bool
mpd_send_queue_changes_brief(struct mpd_connection *connection,
			     unsigned version);
bool
mpd_recv_queue_change_brief(struct mpd_connection *connection,
			    unsigned *position_r, unsigned *id_r);
bool
mpd_send_add(struct mpd_connection *connection, const char *file);
bool
mpd_run_add(struct mpd_connection *connection, const char *uri);
bool
mpd_send_add_id(struct mpd_connection *connection, const char *file);
bool
mpd_send_add_id_to(struct mpd_connection *connection, const char *uri,
		   unsigned to);
int
mpd_recv_song_id(struct mpd_connection *connection);
int
mpd_run_add_id(struct mpd_connection *connection, const char *file);
int
mpd_run_add_id_to(struct mpd_connection *connection, const char *uri,
		  unsigned to);
bool
mpd_send_delete(struct mpd_connection *connection, unsigned pos);
bool
mpd_run_delete(struct mpd_connection *connection, unsigned pos);
bool
mpd_send_delete_range(struct mpd_connection *connection,
		      unsigned start, unsigned end);
bool
mpd_run_delete_range(struct mpd_connection *connection,
		      unsigned start, unsigned end);
bool
mpd_send_delete_id(struct mpd_connection *connection, unsigned id);
bool
mpd_run_delete_id(struct mpd_connection *connection, unsigned id);
bool
mpd_send_shuffle(struct mpd_connection *connection);
bool
mpd_run_shuffle(struct mpd_connection *connection);
bool
mpd_send_shuffle_range(struct mpd_connection *connection,
		       unsigned start, unsigned end);
bool
mpd_run_shuffle_range(struct mpd_connection *connection,
		      unsigned start, unsigned end);
bool
mpd_send_clear(struct mpd_connection *connection);
bool
mpd_run_clear(struct mpd_connection *connection);
bool
mpd_send_move(struct mpd_connection *connection, unsigned from, unsigned to);
bool
mpd_run_move(struct mpd_connection *connection, unsigned from, unsigned to);
bool
mpd_send_move_id(struct mpd_connection *connection, unsigned from, unsigned to);
bool
mpd_run_move_id(struct mpd_connection *connection, unsigned from, unsigned to);
bool
mpd_send_move_range(struct mpd_connection *connection,
		    unsigned start, unsigned end, unsigned to);
bool
mpd_run_move_range(struct mpd_connection *connection,
		    unsigned start, unsigned end, unsigned to);
bool
mpd_send_swap(struct mpd_connection *connection, unsigned pos1, unsigned pos2);
bool
mpd_run_swap(struct mpd_connection *connection, unsigned pos1, unsigned pos2);
bool
mpd_send_swap_id(struct mpd_connection *connection, unsigned id1, unsigned id2);
bool
mpd_run_swap_id(struct mpd_connection *connection, unsigned id1, unsigned id2);
bool
mpd_send_prio(struct mpd_connection *connection, int priority,
	      unsigned position);
bool
mpd_run_prio(struct mpd_connection *connection, int priority,
	     unsigned position);
bool
mpd_send_prio_range(struct mpd_connection *connection, int priority,
		    unsigned start, unsigned end);
bool
mpd_run_prio_range(struct mpd_connection *connection, int priority,
		   unsigned start, unsigned end);