lib/libesp32_epdiy/examples/mpd_status/components/libmpdclient/include/mpd/playlist.h

struct mpd_connection;
struct mpd_playlist;
mpd_malloc
struct mpd_playlist *
mpd_recv_playlist(struct mpd_connection *connection);
bool
mpd_send_list_playlist(struct mpd_connection *connection, const char *name);
bool
mpd_send_list_playlist_meta(struct mpd_connection *connection, const char *name);
bool
mpd_send_playlist_clear(struct mpd_connection *connection, const char *name);
bool
mpd_run_playlist_clear(struct mpd_connection *connection, const char *name);
bool
mpd_send_playlist_add(struct mpd_connection *connection, const char *name,
		      const char *path);
bool
mpd_run_playlist_add(struct mpd_connection *connection,
		     const char *name, const char *path);
bool
mpd_send_playlist_move(struct mpd_connection *connection, const char *name,
		       unsigned from, unsigned to);
bool
mpd_send_playlist_delete(struct mpd_connection *connection, const char *name,
			 unsigned pos);
bool
mpd_run_playlist_delete(struct mpd_connection *connection,
			const char *name, unsigned pos);
bool
mpd_send_save(struct mpd_connection *connection, const char *name);
bool
mpd_run_save(struct mpd_connection *connection, const char *name);
bool
mpd_send_load(struct mpd_connection *connection, const char *name);
bool
mpd_run_load(struct mpd_connection *connection, const char *name);
bool
mpd_send_rename(struct mpd_connection *connection,
		const char *from, const char *to);
bool
mpd_run_rename(struct mpd_connection *connection,
	       const char *from, const char *to);
bool
mpd_send_rm(struct mpd_connection *connection, const char *name);
bool
mpd_run_rm(struct mpd_connection *connection, const char *name);