lib/libesp32_epdiy/examples/mpd_status/components/libmpdclient/vapi/libmpdclient.vapi


		public Connection(string? host = null, uint port = 0, uint timeout_ms = 0);
		[CCode (cname = "mpd_connection_new_async")]
		public Connection.from_async(Mpd.Async async, string welcome);
		public void set_timeout(uint timeout_ms);
		public int get_fd();
		public Mpd.Async get_async();
		public Mpd.Error get_error();
		public unowned string get_error_message();
		public Mpd.ServerError get_server_error();
		public uint get_server_error_location();
		public int get_system_error();
		public bool clear_error();
		public uint[] get_server_version();
		public int cmp_server_version(uint major, uint minor, uint patch);
		public Settings get_settings();
		[CCode (cname = "mpd_recv_directory")]
		public Directory? recv_directory();
		[CCode (cname = "mpd_recv_entity")]
		public Entity? recv_entity();
		[CCode (cname = "mpd_command_list_begin")]
		public bool command_list_begin(bool discrete_ok = false);
		[CCode (cname = "mpd_command_list_end")]
		public bool command_list_end();
		[CCode (cname = "mpd_send_set_volume")]
		public bool send_set_volume(uint volume);
		[CCode (cname = "mpd_run_set_volume")]
		public bool run_set_volume(uint volume);
		[CCode (cname = "mpd_send_outputs")]
		public bool send_outputs();
		[CCode (cname = "mpd_recv_output")]
		public Output recv_output();
		[CCode (cname = "mpd_send_enable_output")]
		public bool send_enable_output(uint output_id);
		[CCode (cname = "mpd_run_enable_output")]
		public bool run_enable_output(uint output_id);
		[CCode (cname = "mpd_send_disable_output")]
		public bool send_disable_output(uint output_id);
		[CCode (cname = "mpd_run_disable_output")]
		public bool run_disable_output(uint output_id);
		[CCode (cname = "mpd_send_password")]
		public bool send_password(string password);
		[CCode (cname = "mpd_run_password")]
		public bool run_password(string password);
		[CCode (cname = "mpd_recv_playlist")]
		public Playlist recv_playlist();
		[CCode (cname = "mpd_send_list_playlist")]
		public bool send_list_playlist(string name);
		[CCode (cname = "mpd_send_list_playlist_meta")]
		public bool send_list_playlist_meta(string name);
		[CCode (cname = "mpd_send_playlist_clear")]
		public bool send_playlist_clear(string name);
		[CCode (cname = "mpd_run_playlist_clear")]
		public bool run_playlist_clear(string name);
		[CCode (cname = "mpd_send_playlist_add")]
		public bool send_playlist_add(string name, string path);
		[CCode (cname = "mpd_run_playlist_add")]
		public bool run_playlist_add(string name, string path);
		[CCode (cname = "mpd_send_playlist_move")]
		public bool send_playlist_move(string name, uint from, uint to);
		[CCode (cname = "mpd_send_playlist_delete")]
		public bool send_playlist_delete(string name, uint pos);
		[CCode (cname = "mpd_run_playlist_delete")]
		public bool run_playlist_delete(string name, uint pos);
		[CCode (cname = "mpd_send_save")]
		public bool send_save(string name);
		[CCode (cname = "mpd_run_save")]
		public bool run_save(string name);
		[CCode (cname = "mpd_send_load")]
		public bool send_load(string name);
		[CCode (cname = "mpd_run_load")]
		public bool run_load(string name);
		[CCode (cname = "mpd_send_rename")]
		public bool send_rename(string from, string to);
		[CCode (cname = "mpd_run_rename")]
		public bool run_rename(string from, string to);
		[CCode (cname = "mpd_send_rm")]
		public bool send_rm(string name);
		[CCode (cname = "mpd_run_rm")]
		public bool run_rm(string name);
		[CCode (cname = "mpd_recv_pair")]
		public Pair recv_pair();
		[CCode (cname = "mpd_recv_pair_named")]
		public Pair recv_pair_named(string name);
		[CCode (cname = "mpd_return_pair")]
		public void return_pair(Pair pair);
		[CCode (cname = "mpd_enqueue_pair")]
		public void enqueue_pair(Pair pair);
		[CCode (cname = "mpd_response_finish")]
		public bool response_finish();
		[CCode (cname = "mpd_response_next")]
		public bool response_next();
		[CCode (cname = "mpd_search_db_songs")]
		public bool search_db_songs(bool exact);
		[CCode (cname = "mpd_search_add_db_songs")]
		public bool search_add_db_songs(bool exact);
		[CCode (cname = "mpd_search_queue_songs")]
		public bool search_queue_songs(bool exact);
		[CCode (cname = "mpd_search_db_tags")]
		public bool search_db_tags(TagType type);
		[CCode (cname = "mpd_count_db_songs")]
		public bool count_db_songs();
		[CCode (cname = "mpd_search_add_uri_constraint")]
		public bool search_add_uri_constraint(Operator oper, string value);
		[CCode (cname = "mpd_search_add_tag_constraint")]
		public bool search_add_tag_constraint(Operator oper, TagType type, string value);
		[CCode (cname = "mpd_search_add_any_tag_constraint")]
		public bool search_add_any_tag_constraint(Operator oper, string value);
		[CCode (cname = "mpd_search_commit")]
		public bool search_commit();
		[CCode (cname = "mpd_search_cancel")]
		public bool search_cancel();
		[CCode (cname = "mpd_recv_pair_tag")]
		public Pair recv_pair_tag(TagType type);
		[CCode (cname = "mpd_send_command")]
		public bool send_command(string command, ...);
		[CCode (cname = "mpd_recv_song")]
		public Song recv_song();
		[CCode (cname = "mpd_send_status")]
		public bool send_status();
		[CCode (cname = "mpd_recv_status")]
		public Status recv_status();
		[CCode (cname = "mpd_run_status")]
		public Status run_status();
		[CCode (cname = "mpd_send_allowed_commands")]
		public bool send_allowed_commands();
		[CCode (cname = "mpd_send_disallowed_commands")]
		public bool send_disallowed_commands();
		[CCode (cname = "mpd_recv_command_pair")]
		public Pair? recv_command_pair();
		[CCode (cname = "mpd_send_list_url_schemes")]
		public bool send_list_url_schemas();
		[CCode (cname = "mpd_recv_url_scheme_pair")]
		public Pair? recv_url_scheme_pair();
		[CCode (cname = "mpd_send_list_tag_types")]
		public bool send_list_tag_types();
		[CCode (cname = "mpd_recv_tag_type_pair")]
		public Pair? recv_tag_type_pair();
		[CCode (cname = "mpd_send_list_all")]
		public bool send_list_all(string path);
		[CCode (cname = "mpd_send_list_all_meta")]
		public bool send_list_all_meta(string path);
		[CCode (cname = "mpd_send_list_meta")]
		public bool send_list_meta(string path);
		[CCode (cname = "mpd_send_update")]
		public bool send_update(string? path = null);
		[CCode (cname = "mpd_send_rescan")]
		public bool send_rescan(string? path = null);
		[CCode (cname = "mpd_recv_update_id")]
		public uint recv_update_id();
		[CCode (cname = "mpd_run_update")]
		public uint run_update(string? path = null);
		[CCode (cname = "mpd_run_rescan")]
		public uint run_rescan(string? path = null);
		[CCode (cname = "mpd_send_idle")]
		public bool send_idle();
		[CCode (cname = "mpd_send_idle_mask")]
		public bool send_idle_mask(Idle mask);
		[CCode (cname = "mpd_send_noidle")]
		public bool send_noidle();
		[CCode (cname = "mpd_recv_idle")]
		public Idle recv_idle(bool disable_timeout);
		[CCode (cname = "mpd_run_idle")]
		public Idle run_idle();
		[CCode (cname = "mpd_run_idle_mask")]
		public Idle run_idle_mask(Idle mask);
		[CCode (cname = "mpd_run_noidle")]
		public Idle run_noidle();
		[CCode (cname = "mpd_send_stats")]
		public bool send_stats();
		[CCode (cname = "mpd_recv_stats")]
		public Stats recv_stats();
		[CCode (cname = "mpd_run_stats")]
		public Stats run_stats();
		[CCode (cname = "mpd_send_sticker_set")]
		public bool send_sticker_set(string type, string uri, string name, string value);
		[CCode (cname = "mpd_run_sticker_set")]
		public bool run_sticker_set(string type, string uri, string name, string value);
		[CCode (cname = "mpd_send_sticker_delete")]
		public bool send_sticker_delete(string type, string uri, string name);
		[CCode (cname = "mpd_run_sticker_delete")]
		public bool run_sticker_delete(string type, string uri, string name);
		[CCode (cname = "mpd_send_sticker_get")]
		public bool send_sticker_get(string type, string uri, string name);
		[CCode (cname = "mpd_send_sticker_list")]
		public bool send_sticker_list(string type, string uri);
		[CCode (cname = "mpd_send_sticker_find")]
		public bool send_sticker_find(string type, string base_uri, string name);
		[CCode (cname = "mpd_recv_sticker")]
		public Pair recv_sticker();
		[CCode (cname = "mpd_return_sticker")]
		public void return_sticker(Pair pair);
		[CCode (cname = "mpd_send_list_queue_meta")]
		public bool send_list_queue_meta();
		[CCode (cname = "mpd_send_list_queue_range_meta")]
		public bool send_list_queue_range_meta(uint start, uint end);
		[CCode (cname = "mpd_send_get_queue_song_pos")]
		public bool send_get_queue_song_pos(uint pos);
		[CCode (cname = "mpd_run_get_queue_song_pos")]
		public Song run_get_queue_song_pos(uint pos);
		[CCode (cname = "mpd_send_get_queue_song_id")]
		public bool send_get_queue_song_id(uint id);
		[CCode (cname = "mpd_run_get_queue_song_id")]
		public Song run_get_queue_song_id(uint id);
		[CCode (cname = "mpd_send_queue_changes_meta")]
		public bool send_queue_changes_meta(uint version);
		[CCode (cname = "mpd_send_queue_changes_brief")]
		public bool send_queue_changes_brief(uint version);
		[CCode (cname = "mpd_recv_queue_change_brief")]
		public bool recv_queue_change_brief(out uint position_r, out uint id_r);
		[CCode (cname = "mpd_send_add")]
		public bool send_add(string file);
		[CCode (cname = "mpd_run_add")]
		public bool run_add(string uri);
		[CCode (cname = "mpd_send_add_id")]
		public bool send_add_id(string file);
		[CCode (cname = "mpd_send_add_id_to")]
		public bool send_add_id_to(string uri, uint to);
		[CCode (cname = "mpd_recv_song_id")]
		public int recv_song_id();
		[CCode (cname = "mpd_run_add_id")]
		public int run_add_id(string file);
		[CCode (cname = "mpd_run_add_id_to")]
		public int run_add_id_to(string uri, uint to);
		[CCode (cname = "mpd_send_delete")]
		public bool send_delete(uint pos);
		[CCode (cname = "mpd_run_delete")]
		public bool run_delete(uint pos);
		[CCode (cname = "mpd_send_delete_range")]
		public bool send_delete_range(uint start, uint end);
		[CCode (cname = "mpd_run_delete_range")]
		public bool run_delete_range(uint start, uint end);
		[CCode (cname = "mpd_send_delete_id")]
		public bool send_delete_id(uint id);
		[CCode (cname = "mpd_run_delete_id")]
		public bool run_delete_id(uint id);
		[CCode (cname = "mpd_send_shuffle")]
		public bool send_shuffle();
		[CCode (cname = "mpd_run_shuffle")]
		public bool run_shuffle();
		[CCode (cname = "mpd_send_shuffle_range")]
		public bool send_shuffle_range(uint start, uint end);
		[CCode (cname = "mpd_run_shuffle_range")]
		public bool run_shuffle_range(uint start, uint end);
		[CCode (cname = "mpd_send_clear")]
		public bool send_clear();
		[CCode (cname = "mpd_run_clear")]
		public bool run_clear();
		[CCode (cname = "mpd_send_move")]
		public bool send_move(uint from, uint to);
		[CCode (cname = "mpd_run_move")]
		public bool run_move(uint from, uint to);
		[CCode (cname = "mpd_send_move_id")]
		public bool send_move_id(uint from, uint to);
		[CCode (cname = "mpd_run_move_id")]
		public bool run_move_id(uint from, uint to);
		[CCode (cname = "mpd_send_move_range")]
		public bool send_move_range(uint start, uint end, uint to);
		[CCode (cname = "mpd_run_move_range")]
		public bool run_move_range(uint start, uint end, uint to);
		[CCode (cname = "mpd_send_swap")]
		public bool send_swap(uint pos1, uint pos2);
		[CCode (cname = "mpd_run_swap")]
		public bool run_swap(uint pos1, uint pos2);
		[CCode (cname = "mpd_send_swap_id")]
		public bool send_swap_id(uint id1, uint id2);
		[CCode (cname = "mpd_run_swap_id")]
		public bool run_swap_id(uint id1, uint id2);
		[CCode (cname = "mpd_send_prio")]
		public bool send_prio(int priority, uint position);
		[CCode (cname = "mpd_run_prio")]
		public bool run_prio(int priority, uint position);
		[CCode (cname = "mpd_send_prio_range")]
		public bool send_prio_range(int priority, uint start, uint end);
		[CCode (cname = "mpd_run_prio_range")]
		public bool run_prio_range(int priority, uint start, uint end);
